--- a/app/less/site-nav/site-nav.less
+++ b/app/less/site-nav/site-nav.less
@@ -1,6 +1,8 @@
 .site-nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    height: 128px;
 
     &__list {
         display: flex;
