--- a/app/less/social/social.less
+++ b/app/less/social/social.less
@@ -1,7 +1,13 @@
 .social {
+    width: 328px;
+    height: 34px;
+    display: flex;
+    justify-content: space-between;
+
     &__nav {
         width: 175px;
         height: 34px;
+        margin-left: 10px;
     }
 
     &__list {
