--- a/app/less/style.less
+++ b/app/less/style.less
@@ -7,3 +7,5 @@
 @import url("navigation-user/navigation-user.less");
 @import url("site-nav/site-nav.less");
 @import url("social/social.less");
+@import url("button/button.less");
+@import url("slider/slider.less");
