--- a/app/less/user-box/user-box.less
+++ b/app/less/user-box/user-box.less
@@ -1,10 +1,15 @@
 .user-box {
     display: flex;
+    width: 1290px;
+    height: 38px;
     justify-content: space-between;
+    align-items: center;
+    background-color: #f2f2f2;
 
     &__tel {
         color: #393939;
         font-size: 11px;
         line-height: 18px;
+        margin-left: 34px;
     }
 }
