--- a/app/less/slider/slider.less
+++ b/app/less/slider/slider.less
@@ -17,6 +17,65 @@
         top: 0;
     }
 
+    &__container {
+        margin-top: 20px;
+        width: 280px;
+        height: 280px;
+        font-family: "Lato Regular";
+        font-weight: 700;
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 141px;
+        border: 1px solid #fff;
+        box-shadow: 0 0 0 1px #fff;
+    }
+
+    &__season {
+        font-size: 20px;
+        line-height: 20px;
+        color: #fff;
+        display: block;
+        margin-top: 35px;
+        margin-bottom: 25px;
+    }
+
+    &__sale {
+        font-size: 59px;
+        color: #000;
+        display: block;
+        margin-bottom: 13px;
+    }
+
+    &__upto {
+        font-size: 20px;
+        color: #fff;
+        display: block;
+        margin-bottom: 29px;
+    }
+
+    &__off {
+        font-size: 31px;
+        line-height: 12px;
+        color: #000;
+    }
+
+    &__now {
+        position: absolute;
+        top: 473px;
+        left: calc(50% - 95px);
+        font-family: "Lato Regular";
+        font-size: 24px;
+        color: #fff;
+        font-weight: 700;
+        text-align: center;
+        background-color: #f09d66;
+        padding: 12px 32px;
+    }
+
+    &__now:hover {
+        color: #000;
+    }
+
     &__slide:nth-child(1) {
         background-image: url("../img/slideback2.jpg");
     }
@@ -35,7 +94,7 @@
         display: flex;
         justify-content: space-between;
         position: absolute;
-        left: 50%;
+        left: 47%;
         bottom: 10%;
     }
 
