--- a/app/less/style.less
+++ b/app/less/style.less
@@ -9,3 +9,4 @@
 @import url("social/social.less");
 @import url("button/button.less");
 @import url("slider/slider.less");
+@import url("support/support.less");
