Svg sprite view

--- a/app/less/slider/slider.less
+++ b/app/less/slider/slider.less
@@ -11,6 +11,7 @@
         width: inherit;
         height: inherit;
         background-image: url("../img/slideback.jpg");
+        background-position: top center;
         object-fit: cover;
         position: absolute;
         left: 0;
