--- a/app/less/support/support.less
+++ b/app/less/support/support.less
@@ -13,7 +13,7 @@
     }
 
     &__item_gold-left {
-        background-image: url("../img/sprite.svg");
+        background-image: url("../img/sprite.svg#gold-left");
     }
 
     &__item_black {
